--- a/controllers/templates/layout.html
+++ b/controllers/templates/layout.html
@@ -9,7 +9,7 @@
    <!-- Bootstrap CSS -->
    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
    <link rel="stylesheet" href="{{ url_for('static', filename='style.css')}}">
-   <title>関東食糧 VegeChecker</title>
+   <title>VegeChecker</title>
 
 </head>
 <body class="cover">
@@ -20,12 +20,12 @@
               KANTO EXPRESS<br />
               Vegetable discriminator
           </h1>
-              <a href="http://www.kanto-syokuryo.jp/shop/default.aspx?kex_mode=b2b" class="btn btn-primary btn-lg" target="_blank">KANTO EXPRESS TO GO!</a>
+              
       </div>
   </header>
   <main>
     <section class="py-5">
-        <h2 class="text-center">関東食糧 野菜判別機</h2>
+        <h2 class="text-center">野菜判別機</h2>
         <h3 class="text-center mb-5">Name of vegetables</h3>
         <p class="text-center">VegeCheckerはディープラーニングで下記10種類の野菜を判別するアプリケーションです。<br>
           にんじん、ジャガイモ、ピーマン、キャベツ、ホウレンソウ、キュウリ、トマト、ナス、セロリ、ブロッコリー。<br>
